# resonate-agentic

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TECH_DEBT.md  pyproject.toml  requirements.txt
.claude/: settings.example.json  upstream-issue-resonate-x402.md
.gemini/commands/: add-backend-tool.toml  add-workflow-node.toml  check.toml  eval-and-deploy.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: agent_task.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ai-review.yml  ci.yml  deploy-dispatch.yml  security.yml
app/: __init__.py  agent.py  config.py  schemas.py
app/agents/: __init__.py  artist_agent.py  catalog_agent.py  commerce_agent.py  community_agent.py  dj_agent.py  workflow_agent.py
app/guardrails/: __init__.py  budget.py
app/tools/: __init__.py  _http.py  artist.py  catalog.py  commerce.py  community.py  dj.py  mcp.py  payments.py
app/workflows/: __init__.py  _parsing.py  artist_upload.py  discovery_purchase.py  dj_session.py
docs/: AGENTIC_PLATFORM_STRATEGY.md  AGENTIC_SDLC.md  GCP_AGENTIC_STACK.md  README.md
docs/adr/: ADR-0001-backend-reuse-vs-reimplement.md  ADR-0002-feature-scope-compute-vs-data.md  (+3 more)
scripts/: harness_guardrails.py
tests/: conftest.py  test_budget_guardrail.py  test_dj_budget.py  test_imports.py  test_mcp_toolset.py  test_tool_errors.py  test_workflow_input_parsing.py  test_workflow_runtime.py  test_x402_live.py  test_x402_payment.py
(+10 files in other folders)
