[project]
name = "resonate-agentic"
version = "0.1.0"
description = "Resonate — Agentic-first music platform powered by ADK 2.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0",
    "google-genai",
    "mcp>=1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
